Fix PARALLEL_OLD checks for disabled, redundant, or cruft.